--- a/templates/assets/css/menu.css
+++ b/templates/assets/css/menu.css
@@ -2,9 +2,8 @@ nav.main-menu {
     float: left;
     font-size: 0.8em;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     position: fixed;
-    top: 0;
     z-index: 100;
 }
 
@@ -39,7 +38,7 @@ nav.main-menu li ul {
     position: absolute;
     width: 180px;
     z-index: 999;
-    border: 1px solid #dcdcdc;
+    border: 1px outset #dcdcdc;
     background-color: white;
 }
 
